<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg" 
    android:onClick="onDialogDoneLayoutClick"
    >
	<TextView
	    android:id="@+id/mTitleDialogPass"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="4dp"
	    android:padding="5dp"
	    android:textColor="#333"
	    android:textSize="20sp"
	    android:text="@string/text_done_pass_dialog_setting" 
	    />
		<RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
	        >
	        <!-- 密码输入框，第一次 -->
			<EditText 
			    android:id="@+id/mDonePassword"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="5dp"
			    android:hint="@string/edit_hint_done_password"
			    android:textColor="@color/black"
			    android:textSize="15sp"		    		    
			    android:password="true"
			    android:background="@drawable/selector_edittext"
			    android:singleLine="true"	    
			    />
			<!-- 密码输入框,确认 -->
			<EditText 
			    android:id="@+id/mDonePasswordConfirm"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/mDonePassword"
			    android:layout_marginTop="10dp"
			    android:hint="@string/edit_hint_done_password_confirm"
			    android:textColor="@color/black"
			    android:textSize="15sp"		    		    
			    android:password="true"
			    android:background="@drawable/selector_edittext"
			    android:singleLine="true"	    
			    />
		</RelativeLayout>                  
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginTop="33dp"
            android:layout_marginBottom="8dp"
            >           
            <Button
              	android:layout_width="110dp"
              	android:layout_height="wrap_content"
              	android:text="@string/btn_text_yes"
              	android:textSize="16sp"
              	android:textColor="#fff"
              	android:background="@drawable/selector_btn_style_green"
              	android:gravity="center"
			  	android:onClick="onButtonPasswordPositive"
              	/>            
            <Button
              	android:layout_width="110dp"
              	android:layout_height="wrap_content"
              	android:layout_marginLeft="10dp"
              	android:text="@string/btn_text_no"
              	android:textSize="16sp"
              	android:textColor="#333"
              	android:background="@drawable/selector_btn_style_white"
              	android:gravity="center"
			  	android:onClick="onButtonPasswordNegative"
              	/>
        </LinearLayout>

</LinearLayout>
