<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg" 
    android:onClick="onDialogDoneLayoutClick"
    >
	<TextView
	    android:id="@+id/mTitleDialogNum"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="4dp"
	    android:padding="5dp"
	    android:textColor="#333"
	    android:textSize="20sp"
	    android:text="@string/text_done_num_dialog_setting" 
	    />
		<RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        >
	        <!-- 手机号码输入框 -->
			<EditText 
			    android:id="@+id/mDoneNumber"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="5dp"
			    android:hint="@string/edit_hint_done_number"
			    android:textColor="@color/black"
			    android:textSize="15sp"		    		    
			    android:inputType="phone"
			    android:background="@drawable/selector_edittext"
			    android:singleLine="true"	    
			    />		
		</RelativeLayout>                  
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginTop="33dp"
            android:layout_marginBottom="8dp"
            >           
            <Button
              	android:layout_width="110dp"
              	android:layout_height="wrap_content"
              	android:text="@string/btn_text_confirm"
              	android:textSize="16sp"
              	android:textColor="@color/white"
              	android:background="@drawable/selector_btn_style_green"
              	android:gravity="center"
			  	android:onClick="onButtonNumberConfirm"
              	/>            
            <Button
              	android:layout_width="110dp"
              	android:layout_height="wrap_content"
              	android:layout_marginLeft="10dp"
              	android:text="@string/btn_text_test"
              	android:textSize="16sp"
              	android:textColor="@color/white"
              	android:background="@drawable/selector_btn_style_red"
              	android:gravity="center"
			  	android:onClick="onButtonNumberTest"
              	/>
        </LinearLayout>

</LinearLayout>
