<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_vertical"
    >
    <!-- 登录界面中的Title和返回按钮 -->
    <RelativeLayout 
        android:id="@+id/mTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_title_bar"
        >
        <Button
            android:id="@+id/mTitleBtnBack"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/btn_text_back"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/selector_title_btn_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_title_done"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"          
            />    
    </RelativeLayout>
    
    <!-- 盗后追踪：设置界面 -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
        android:layout_below="@+id/mTitleBar"
        android:orientation="vertical"
        >
        <!-- 文字说明 -->
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"     
			android:layout_marginTop="20dp"	
			android:orientation="vertical"
	        >	        
			<TextView 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"	 
				android:text="@string/text_done_tip0"	    
				android:textColor="@color/white"
				android:textSize="20sp"
				android:textStyle="bold"
			    />
			<TextView 
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"	 
				android:text="@string/text_done_tip1"	    
				android:textColor="@color/white"
				android:textSize="20sp"
				android:layout_marginLeft="40dp"
				android:textStyle="bold"
			    />
		</LinearLayout>
		<!-- 【设置开启密码】按钮 -->
		<RelativeLayout
		    android:id="@+id/mDonePasswordLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/selector_btn_style_red"	        
			android:clickable="true"
			android:layout_marginTop="20dp"	
			android:onClick="onLayoutPasswordClick"
	        >	        
			<ImageView
			    android:id="@+id/mIVPass"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:src="@drawable/ic_done_password"
			    android:layout_marginRight="5dp"
			    />
			<TextView 
			    android:id="@+id/mTextPass"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"	 
				android:text="@string/text_done_pass_setting"	    
				android:textColor="@color/white"
				android:textSize="18sp"
				android:layout_centerInParent="true"
				android:layout_toRightOf="@+id/mIVPass"
			    />
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:src="@drawable/ic_arrows_right"
			    android:layout_alignParentRight="true"
			    android:layout_centerVertical="true"
			    />
		</RelativeLayout>
	    <!-- 【设置安全号码】按钮 -->
	    <RelativeLayout 
	        android:id="@+id/mDoneNumberLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/selector_btn_style_red"	        
			android:clickable="true"
			android:layout_marginTop="20dp"	
			android:onClick="onLayoutNumberClick"
	        >	        
			<ImageView
			    android:id="@+id/mIVNum"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:src="@drawable/ic_done_number"
			    android:layout_marginRight="5dp"
			    />
			<TextView 
			    android:id="@+id/mTextNum"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"	 
				android:text="@string/text_done_num_setting"	    
				android:textColor="@color/white"
				android:textSize="18sp"
				android:layout_centerInParent="true"
				android:layout_toRightOf="@+id/mIVNum"
			    />
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:src="@drawable/ic_arrows_right"
			    android:layout_alignParentRight="true"
			    android:layout_centerVertical="true"
			    />
		</RelativeLayout>
	    <!-- 【一键开启】按钮 -->
	    <RelativeLayout 
	        android:id="@+id/mDoneStartLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"       
			android:layout_marginTop="20dp"	
	        >	        
			<Button
			    android:id="@+id/mDoneBtnStart"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/selector_btn_style_green"
		       	android:gravity="center"
		        android:text="@string/btn_text_done_start"
		        android:textColor="@color/white"
		       	android:textSize="18sp"		        
		        android:onClick="onButtonStartClick"
		        android:padding="18dp"
			    />
		</RelativeLayout>
				
    </LinearLayout>
    
	
</RelativeLayout>